--- a/05-crud-produtos/package.json
+++ b/05-crud-produtos/package.json
@@ -1,7 +1,6 @@
 {
   "name": "05-crud-produtos",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon",
@@ -13,5 +12,6 @@
   "dependencies": {
     "express": "^4.19.2",
     "nodemon": "^3.1.0"
-  }
+  },
+  "description": ""
 }
